# forgeai-multi-agent-system

./: .gitignore  README.md  pyproject.toml
src/forgeai/: main.py
src/forgeai/agents/: context_engineer.py  critic.py  evaluator.py  merge_documents.py  retriever_knowlegde.py  retriever_web.py  supervisor.py  synthesizer.py
src/forgeai/config/: README.md  prompts.py  settings.py
src/forgeai/graphs/: research_graph.py
src/forgeai/rag/: vector_store.py
src/forgeai/utils/: llm.py  pydantic_models.py
tests/: test_retriever_knowlegde.py.py
